<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingVertical="6dp"
    tools:context=".Asrmonitor">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewtitulo"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/monitorgsa"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/viewtitulo"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7,10"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="7,10"
                android:valueTo="8,00" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/viewph">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/co2"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tvco2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsco2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="30"
                android:valueTo="50" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewHco3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/viewCo2">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hco3"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tvhco3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rshco3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="20"
                android:valueTo="30" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewinstructions"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10sp"
        app:cardBackgroundColor="@color/background_component"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewHco3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:text="Intrucciones"
            android:layout_marginHorizontal="70dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:text="Generalidades"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabintrucciones"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="95dp"
                android:layout_gravity="end|bottom"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/background_button"
                app:fabSize="normal"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabgeneralidades"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_gravity="start|bottom"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/background_button"
                app:fabSize="normal"
                app:tint="@color/white" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="16sp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/viewinstructions"

        />

    <Button
        android:id="@+id/btnValoresNormales"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="16sp"
        android:text="@string/valores_normales"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"

        />




</androidx.constraintlayout.widget.ConstraintLayout>